# shmopthread

./: .clang-format  .lint  CMakeLists.txt  LICENSE  Makefile  README.MD
example/: CMakeLists.txt  read.cpp  write.cpp
include/: ShmopThread.h
src/: ShmopThread.cpp
