
# example write
SET(OUTPUT_BINARY_TEST_WRITE "test-write")
SET(SOURCE_FILES_TEST_WRITE "${CMAKE_CURRENT_SOURCE_DIR}/write.cpp")
add_executable("${OUTPUT_BINARY_TEST_WRITE}" "${SOURCE_FILES_TEST_WRITE}" "${OBJLIB}")

# example write
SET(OUTPUT_BINARY_TEST_READ "test-read")
SET(SOURCE_FILES_TEST_READ "${CMAKE_CURRENT_SOURCE_DIR}/read.cpp")
add_executable("${OUTPUT_BINARY_TEST_READ}" "${SOURCE_FILES_TEST_READ}" "${OBJLIB}")
